--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,6 @@
-.btn {
-    font-size: 1.2rem;
-    margin: 3rem;
-}
-
-.App-header {
-    font-size: 3rem;
-    color: #656565;
-    padding: 0 0 11rem 0;
-    // border-bottom: 1.5px solid #656565;
-}
-
-.App {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+@import "styles/variables";
+@import "styles/fonts";
+@import "styles/mixins";
+@import "styles/global";
+@import "styles/normalize";
+@import "styles/buttons";
