--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -37,11 +37,13 @@ img {
 }
 
 .app-container {
-    min-height: 100vh;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    margin: auto;
+    max-width: 60rem;
+    min-height: 100vh;
 }
 
 .page-title {
